--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body { 
+    font-family: Roboto, Arial, sans-serif;
+    margin: 0;
+    background-color: rgba(0, 45, 104, 0.596);
+  }
+  
+  .version-info {
+    font-size: 8pt;
+    float: right;
+  }
+  
+  .mat-slider.mat-slider-horizontal .mat-slider-track-fill {
+    background-color: red;
+  }
+  
+  .mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
+    background-color: orange;
+  }
+  .mat-accent .mat-slider-thumb {
+
+    background-color: white;
+    border: solid 2px gray;
+  }
